--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "bluebird": "^2.9.25",
-    "cheerio": "^0.19.0",
+    "cheerio": "github:timaschew/cheerio",
     "css-property": "^2.0.0",
     "css-rules": "^1.0.0",
     "extend": "^3.0.0",
